# AWS-Observability-MCP-Server

./: .gitignore  README.md  aws-observability-mcp-server-SPEC.md
aws-observability-mcp/: pyproject.toml  requirements.txt
aws-observability-mcp/src/aws_observability_mcp/: app.py  formatting.py  server.py
aws-observability-mcp/src/aws_observability_mcp/aws/: clients.py  cloudwatch.py  ecs.py  logs.py
aws-observability-mcp/src/aws_observability_mcp/tools/: alarms.py  health.py  logs.py  metrics.py
aws-observability-mcp/tests/: conftest.py  test_alarms.py  test_health.py  test_logs.py  test_metrics.py
