[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-observability-mcp"
version = "0.1.0"
description = "Remote, OAuth-secured MCP server exposing AWS CloudWatch + ECS observability tools to LLM agents."
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.4.2",
    "mcp==1.28.1",
    "boto3==1.43.36",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "moto[cloudwatch,logs,ecs]==5.2.2",
]

[project.scripts]
aws-observability-mcp = "aws_observability_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
